# iCubProprioception

./: .gitignore  CMakeLists.txt  README.md
app/: BackgroundApps-SIM.xml  iCubProprioception-BATCH.xml  iCubProprioception-DataDump.xml  iCubProprioception-DataDump.xml.template  iCubProprioception-SIM.xml  iCubProprioception.xml  iCubProprioception.xml.template
config/: config.ini  iCubProprioception-Config-SIM.ini  iCubProprioception-Config.ini  parameters.ini
doc/: main.dox
src/: CMakeLists.txt
src/iCubProprioception/: CMakeLists.txt
src/iCubProprioception/app/: iCubProprioception-BATCH.xml  iCubProprioception-Batch.xml  iCubProprioception-DataDump.xml  iCubProprioception-External.xml  iCubProprioception-SIM.xml  iCubProprioception-Sim.xml  iCubProprioception-Skeleton.xml  iCubProprioception-iKin.xml
src/iCubProprioception/include/iCubProprioception/: BatchCADSuperimposer.h  CADSuperimposer.h  ExtCADSuperimposer.h  SkeletonSuperimposer.h  SuperimposerFactory.h  SuperimposerHandler.h  ThreadControllerSHC.h  common.h  iKinCADSuperimposer.h
src/iCubProprioception/src/: BatchCADSuperimposer.cpp  CADSuperimposer.cpp  ExtCADSuperimposer.cpp  SkeletonSuperimposer.cpp  SuperimposerFactory.cpp  SuperimposerHandler.cpp  ThreadControllerSHC.cpp  iKinCADSuperimposer.cpp  main.cpp
src/iCubProprioception/thrift/: idl_mesh.thrift  idl_rfm.thrift
